force-app/main/default/objects/Training_Session__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <formula>25 - Quantity_Participant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>