force-app/main/default/objects/Training_Session__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>Training__r.Service_Description__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>