force-app/main/default/objects/Training_Session__c/fields/Quantity_Participant__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Participant__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity(Participant)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>