force-app/main/default/objects/Training_Session__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <formula>Training__r.Requirements__c</formula>
    <label>Requirements</label>
    <type>Text</type>
</CustomField>