force-app/main/default/objects/Training_Session__c/fields/Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available__c</fullName>
    <formula>IF(ISPICKVAL( Status__c , &quot;Active&quot;),
 Availability__c ,
 IF(ISPICKVAL( Status__c , &quot;Sold Out&quot;),
  0,
  0
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>