force-app/main/default/objects/Training_Session__c/fields/Training_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Name__c</fullName>
    <formula>Training__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Name</label>
    <type>Text</type>
</CustomField>