force-app/main/default/objects/Training_Session__c/fields/Virtual_session_link__c.field-meta.xml
<CustomField>
    <fullName>Virtual_session_link__c</fullName>
    <label>Virtual session link</label>
    <type>Url</type>
</CustomField>