force-app/main/default/objects/Training_Session__c/validationRules/virtual_link.validationRule-meta.xml
<ValidationRule>
    <fullName>virtual_link</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Location__c , &quot;Virtual&quot;),  ISBLANK(Virtual_session_link__c )  )</errorConditionFormula>
    <errorDisplayField>Virtual_session_link__c</errorDisplayField>
    <errorMessage>Debe colocar el link de Zoom</errorMessage>
</ValidationRule>