force-app/main/default/objects/Training_Session__c/listViews/Training_Sessions.listView-meta.xml
<ListView>
    <fullName>Training_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Session_Start__c</columns>
    <columns>Status__c</columns>
    <columns>Seats_Available__c</columns>
    <columns>Location__c</columns>
    <columns>Description__c</columns>
    <columns>Requirements__c</columns>
    <columns>Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Sold Out</value>
    </filters>
    <label>Training Sessions</label>
    <sharedTo>
        <group>Public_Users</group>
    </sharedTo>
</ListView>